# HIBP

./: .gitignore  README.md  __init__.py  alembic.ini  app.py  config.py  db.py  forms.py  pyproject.toml  requirements.txt  setup.py  utils.py
alembic/: env.py
alembic/versions/: 75b847bb7631_create_breach_table.py  feee490c16b6_create_account_breach_table.py  ff651e8da2e9_create_account_table.py
app/: __init__.py
app/routes/: hibp_route.py  subscribe_route.py
app/utils/: helpers.py
routes/: hibp.py  hibp_route.py  subscribe.py  subscribe_route.py
services/: account_service.py  breach_service.py  database_service.py  hibp_service.py  subscribe_service.py
src/: __init__.py
src/routes/: hibp_route.py  subscribe_route.py
src/services/: database_service.py
src/templates/subscribe/: subscribe_form.html
src/templates/unsubscribe/: unsubscribe_form.html
src/utils/init/: config_init.py
templates/subscribe/: subscribe.html  subscribe_success.html
templates/unsubscribe/: unsubscribe_success.html
utils/init/: db_init.py
